Momentary glitch when a video switches resolutions
Categories
(Core :: Graphics: WebRender, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox-esr78 | --- | unaffected |
firefox79 | --- | unaffected |
firefox80 | --- | unaffected |
firefox81 | --- | fixed |
People
(Reporter: mstange, Assigned: mattwoodrow)
References
(Regression)
Details
(Keywords: regression)
Attachments
(3 files)
This is probably a regression from bug 1653166 or from bug 1653048.
When playing a YouTube video with Auto quality, there's an inconsistent frame or two as the video changes from 720p to 1080p. It looks like the 1080p frame is displayed with the 720p transform, i.e. it renders too big.
I encountered this when watching the embedded video under "Conclusion" on https://en.chessbase.com/post/what-on-earth-is-5d-chess .
Reporter | ||
Comment 1•5 years ago
|
||
Assignee | ||
Updated•5 years ago
|
Assignee | ||
Comment 2•5 years ago
|
||
This is a regression from https://hg.mozilla.org/mozilla-central/rev/ff35f5c6ce13
It switched videos over to use the 'computed transform' option for reference frame, and the 'scale from size' is computed in the content process.
When ImageBridge delivers a frame of a different size asynchronously, then we get the transforms wrong.
Assignee | ||
Comment 3•5 years ago
|
||
Comment 4•5 years ago
|
||
Set release status flags based on info from the regressing bug 1653166
Comment 6•5 years ago
|
||
bugherder |
Updated•5 years ago
|
Updated•5 years ago
|
Description
•