Bug 1657523 - Compute the scale from size for async image pipelines in the compositor process, so that we get the size matching the current texture. r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D86132