gfx/layers/wr/WebRenderUserData.cpp
@@ -231,8 +231,7 @@ already_AddRefed<ImageClient> WebRenderImageData::GetImageClient() {
 void WebRenderImageData::CreateAsyncImageWebRenderCommands(
     mozilla::wr::DisplayListBuilder& aBuilder, ImageContainer* aContainer,
     const StackingContextHelper& aSc, const LayoutDeviceRect& aBounds,
-    const LayoutDeviceRect& aSCBounds, const gfx::Matrix4x4& aSCTransform,
-    const gfx::MaybeIntSize& aScaleToSize, VideoInfo::Rotation aRotation,
+    const LayoutDeviceRect& aSCBounds, VideoInfo::Rotation aRotation,
     const wr::ImageRendering& aFilter, const wr::MixBlendMode& aMixBlendMode,
     bool aIsBackfaceVisible) {
   MOZ_ASSERT(aContainer->IsAsync());
@@ -254,14 +253,6 @@ void WebRenderImageData::CreateAsyncImageWebRenderCommands(
   }
   MOZ_ASSERT(!mImageClient);
 
-  LayoutDeviceSize scaleFromSize;
-  AutoLockImage autoLock(aContainer);
-  if (autoLock.HasImage()) {
-    mozilla::layers::Image* image = autoLock.GetImage();
-    gfx::IntSize size = image->GetSize();
-    scaleFromSize = LayoutDeviceSize(size.width, size.height);
-  }
-
   // Push IFrame for async image pipeline.
   //
   // We don't push a stacking context for this async image pipeline here.
@@ -275,8 +266,7 @@ void WebRenderImageData::CreateAsyncImageWebRenderCommands(
                       /*ignoreMissingPipelines*/ false);
 
   WrBridge()->AddWebRenderParentCommand(OpUpdateAsyncImagePipeline(
-      mPipelineId.value(), aSCBounds, aSCTransform, aScaleToSize, aRotation,
-      aFilter, aMixBlendMode, scaleFromSize));
+      mPipelineId.value(), aSCBounds, aRotation, aFilter, aMixBlendMode));
 }
 
 void WebRenderImageData::CreateImageClientIfNeeded() {
