gfx/layers/wr/WebRenderUserData.h
@@ -157,8 +157,7 @@ class WebRenderImageData : public WebRenderUserData {
   void CreateAsyncImageWebRenderCommands(
       mozilla::wr::DisplayListBuilder& aBuilder, ImageContainer* aContainer,
       const StackingContextHelper& aSc, const LayoutDeviceRect& aBounds,
-      const LayoutDeviceRect& aSCBounds, const gfx::Matrix4x4& aSCTransform,
-      const gfx::MaybeIntSize& aScaleToSize, VideoInfo::Rotation aRotation,
+      const LayoutDeviceRect& aSCBounds, VideoInfo::Rotation aRotation,
       const wr::ImageRendering& aFilter, const wr::MixBlendMode& aMixBlendMode,
       bool aIsBackfaceVisible);
 
